--- a/.gitignore
+++ b/.gitignore
@@ -117,4 +117,7 @@ dmypy.json
 # Ignore all local history of files
 .history
 
+.code-workspace
+
 # End of https://www.gitignore.io/api/python,visualstudiocode
+BappoRealmBotWorkspace.code-workspace
