--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 discord
-https://github.com/kyriog/xbox-webapi-python/archive/aiohttp.zip
+git+https://github.com/Sonic4999/xbox-webapi-python.git@aiohttp
 git+https://github.com/jmoiron/humanize.git
